clio/src/ClioApp.css
:root {
    /* --vp-height is also set dynamically from JavaScript. */
    --vp-height: 100vh;
    --vp-height: -webkit-fill-available;

    --toolbar-height: 60px;
}

#root.fullscreen {
    --toolbar-height: 0px;
}

html {
    background-color: black
}

body {
    margin: 0;
}

div {
    background-color: black;
    color: white;
    white-space: pre-wrap;
}

div#root {
    height: var(--vp-height);
}

.clio_app {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: auto;
}

.image {
    display: grid;
}

img {
    align-self: center;
    justify-self: center;
    object-fit: contain;
}

@media (orientation: landscape) {
    .clio_app {
        padding-left: var(--toolbar-height);
        grid-template-columns: repeat(2, 1fr);
        grid-template-rows: auto;
    }
    .image {
        max-height: calc(var(--vp-height) - var(--toolbar-height));
        min-width: calc(50vw - var(--toolbar-height));
    }
    img {
        height: calc(var(--vp-height) - var(--toolbar-height));
        width: calc(50vw - var(--toolbar-height));
    }
    .fullscreen img {
        height: var(--vp-height);
    }
}

@media (orientation: portrait) {
    .clio_app {
        grid-template-rows: repeat(2, 1fr);
        grid-template-columns: auto;
    }
    .image {
        min-width: 100vw;
        height: 100vw;
        width: 100vw;
    }
    img {
        height: 100vw;
        width: 100vw;
    }
}

.textFrame {
}

.textContainer {
    display: flex;
    flex-direction: column;
    padding-right: 30px;
}

.textInner {
    /*padding: 12px;*/
    max-height: var(--vp-height);
    display: flex;
    flex-direction: column;
}

@media (orientation: landscape) {
    .textContainer {
        padding-left: 20px;
        height: calc(50vw - (var(--toolbar-height) - 6px));
        max-height: var(--vp-height);
        padding-right: 48px;
        /*margin-top: 6px;*/
    }
    .textInner {
        height: calc(50vw - (var(--toolbar-height)));
        max-height: calc(var(--vp-height) - 62px);
        /*max-height: calc(var(--vp-height) - 50px);*/
    }
}
@media (orientation: landscape) and (max-aspect-ratio: 2) {
    .textContainer {
        margin-top: calc((var(--vp-height) - 50vw) / 2);
        max-height: calc(var(--vp-height) - var(--toolbar-height));
    }
}

@media (orientation: portrait) {
    .textFrame {
        height: calc(var(--vp-height) - (100vw + 10px + var(--toolbar-height)));
        padding-top: 14px;
        margin-left:  var(--toolbar-height);
        margin-right:  var(--toolbar-height);
    }
    .fullscreen .textFrame {
        height: calc(var(--vp-height) - (100vw + 88px));
    }
    .textContainer {
        height: calc(var(--vp-height) - (100vw + 10px + var(--toolbar-height)));
        padding: 0;
    }
    .fullscreen .textContainer {
        height: calc(var(--vp-height) - (100vw + 88px));
    }
    .textInner {
        height: calc(var(--vp-height) - (100vw + 10px + var(--toolbar-height)));
        padding: 0;
    }
    .fullscreen .textInner {
        height: calc(var(--vp-height) - (100vw + 88px));
    }
}

.fullscreen .textFrame {
    padding: 30px;
}

.textScroll {
    flex-grow: 1;
    overflow: scroll;
    font-family: arial, sans-serif;
    font-size: 11pt;
}

.webcamVideo {
    /*z-index: -1;*/
    z-index: 1;
    width: 100vw;
    height: 90vh;
    position: absolute;
    left: 0;
    top: 0;
    max-height: 100vh;
    max-width: 100vw;
}
.photoCapture {
    z-index: 1;
    width: 100vw;
    height: 100vh;
    position: absolute;
    left: 0;
    top: 0;
    max-height: 100vh;
    max-width: 100vw;

    display: flex;
    justify-content: center;
    background: transparent;
    /* height: 100vh; Full viewport height */
}
.photoCaptureInner {
    max-width: 100%; /* div B can't be wider than div A */
    max-height: 100%; /* div B can't be taller than div A */
    width: 100vmin; /* 100vmin ensures that div B is the largest square that will fit in div A */
    /*height: 100vmin;*/
    height: calc(50vw - var(--toolbar-height));
    background-color: black;
    position: relative;
}
@media (orientation: landscape) {
    .photoCapture {
        align-items: center;
    }
}
@media (orientation: portrait) {
    .photoCaptureInner {
        min-width: 100vw;
        height: 100vw;
        width: 100vw;
    }    
}

.photoCaptureInner > div {
    max-width: 100%;
    max-height: 100%;
    width: 100%;
    height: 100%;
}
.photoCaptureInner div {
    position: relative;
}
.photoCapture .captureButton {
    position: absolute;
}
.photoCapture .captureButton.close {
    right: 0;
    top: 0;
}
.photoCapture .captureButton.send {
    right: 0;
    bottom: 0;
}
.photoCapture .captureButton.reverseCamera {
    right: 0;
    bottom: 64px;
}

.navLeft {
    display: flex;
    justify-content: center;
    position: absolute;
    top: 0;
    left: 0;
    height: 100vh;
    z-index: 100;
    background: transparent;
    margin-left: -10px;
}

.navRight {
    display: flex;
    justify-content: center;
    position: absolute;
    top: 0;
    right: 0;
    height: var(--vp-height);
    z-index: 100;
    background: transparent;
    margin-right: -10px;
}

@media (orientation: portrait) {
    .navLeft {
        top: 100vw;
        height: calc(var(--vp-height) - 100vw);
    }
    .navRight {
        top: 100vw;
        height: calc(var(--vp-height) - 100vw);
    }
}

.navButton, .captureButton {
    margin: 0;
    background: transparent;
    color: white;
    border: none;
    transition: opacity 1s;
    padding: 10px;
}

#root.fullscreen .navButton {
    opacity: 0;
}

#root.fullscreen.show-overlays .navButton {
    opacity: 1;
}

svg {
    width: 38px;
    height: 38px;
}

.spinnerFrame {
    position: absolute;
    /*
    top: 0;
    left: 0;
    width: 100vw;
    */
    bottom: 0;
    right: 0;
    /*height: var(--vp-height);*/
    background: transparent;
    display:inline-flex;
    padding: 10px;
    width: 26px;
    /*
    vertical-align:top;
    justify-content:center;
    align-items:center;
    */
}


/**  loader  **/
/*
html {
    height: 100%;
  }
  
  body {
    background-image: radial-gradient(circle farthest-corner at center, #3C4B57 0%, #1C262B 100%);
  }
  */
.loader {
    width: 64px;
    height: 64px;
    border-radius: 50%;
    perspective: 800px;
}
.spinnerFrame .loader {
    width: 32px;
    height: 32px;
    padding-bottom: 10px;
}

.loader .inner {
    position: absolute !important;
    box-sizing: border-box;
    width: 100%;
    height: 100%;
    border-radius: 50%;

    width: 64px !important;
    height: 64px !important;
    left: calc(50% - 32px);
    top: calc(50% - 32px);
}
.spinnerFrame .loader .inner {
    width: 32px !important;
    height: 32px !important;
    left: calc(50% - 16px);
    top: calc(50% - 16px);
}


.loader .inner.one {
    /*left: 0%;
    top: 0%;*/
    animation: rotate-one 2s linear infinite;
    border-bottom: 3px solid #EFEFFA;
}

.loader .inner.two {
    /*right: 0%;
    top: 0%;*/
    animation: rotate-two 2s linear infinite;
    border-right: 3px solid #EFEFFA;
}

.loader .inner.three {
    /*right: 0%;
    bottom: 0%;*/
    animation: rotate-three 2s linear infinite;
    border-top: 3px solid #EFEFFA;
}

@keyframes rotate-one {
    0% {
        transform: rotateX(35deg) rotateY(-45deg) rotateZ(0deg);
    }
    100% {
        transform: rotateX(35deg) rotateY(-45deg) rotateZ(360deg);
    }
}

@keyframes rotate-two {
    0% {
        transform: rotateX(50deg) rotateY(10deg) rotateZ(0deg);
    }
    100% {
        transform: rotateX(50deg) rotateY(10deg) rotateZ(360deg);
    }
}

@keyframes rotate-three {
    0% {
        transform: rotateX(35deg) rotateY(55deg) rotateZ(0deg);
    }
    100% {
        transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
    }
}

